upadating styles and optimizing script

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EuroMilhões</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div>
-        <h1>EuroMillions</h1>
+        <h1>EuroMilhões</h1>
     </div>
     <div class="content-area">
     
         <div class="bt-area">
-            <button id="spark" class="main-bt" onclick="createBalls()">Start here</button>
-            <button id="reset" class="reset-bt" onclick="location.reload()">Reset</button>
+            <button id="spark" class="main-bt" onclick="createBalls()">Gerar Chave</button>
+            <button id="reset" class="reset-bt" onclick="location.reload()">Limpar</button>
         </div>
     </div>
     <script src="script.js"></script>
